

bin_PROGRAMS = softrock

softrock_CFLAGS = -std=gnu99 -O3 -Wall @SIMD_FLAGS@

softrock_SOURCES = client.c        client.h       \
                   config_ops.c    config_ops.h   \
		   listener.c      listener.h     \
		   operations.c    operations.h   \
                   receiver.c      receiver.h     \
       jackio.c		jackio.h						\
                   server.c                       \
		   softrock.c      softrock.h     \
		   softrockio.c    softrockio.h   \
		   util.c          util.h         \
		   messages.h 	buffer.h
		   
