bin_PROGRAMS				= usrp_server
CC					= g++
usrp_server_CPPFLAGS	= -g -fopenmp -O3 -Wall -msse3
usrp_server_CFLAGS	= -g -fopenmp -O3 -Wall -msse3

usrp_server_SOURCES = \
		bandscope.c  \
		listener.c \
		receiver.c \
		transmitter.c \
		util.c \
		client.c \
		usrp.c \
		server.c \
		usrp_audio.c \
		resampler.c \
		bandscope.h \
		buffer.h \
		client.h \
		getopt.h \
		listener.h \
		messages.h \
		receiver.h  transmitter.h  usrp_audio.h  usrp.h  util.h resampler.h

